# first-athena-query

./: .env.example  Makefile  README.md  athena.py  detroit_census_tracts.py  detroit_hmda_queries.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: docs.yaml
docs/: athena.md  aws.md  conf.py  createdb.md  index.md  python.md  sql.md  upload.md
scripts/: wrangle_hmda_data.py
