[build-system]
requires = ["setuptools >= 61.0",]
build-backend = "setuptools.build_meta"

[project]
name = "first-athena-query"
description = "How to analyze millions of records in seconds with Amazon Web Services and SQL"
version = "1.0.0"
requires-python = ">=3.9"
dependencies = [
    'exceptiongroup; python_version<"3.11"',
    "pre-commit",
    "boto3",
    "jupyterlab",
    "pandas",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-autobuild",
    "myst-parser",
    "sphinx-palewire-theme",
]

[tool.setuptools]
packages = ["docs",]
