[build-system]
requires = ["setuptools >= 61.0",]
build-backend = "setuptools.build_meta"

[project]
name = "first-athena-query"
description = "How to analyze millions of records in seconds with Amazon Web Services and SQL"
version = "1.0.0"
requires-python = "==3.12.0"
dependencies = [
    "pre-commit",
    "pandas",
    "boto3",
    "python-dateutil",
    "python-dotenv",
    "requests",
    "sphinx",
    "sphinx-autobuild",
    "myst-parser",
    "sphinx-palewire-theme",
]

[tool.setuptools]
packages = ["docs",]
